package MsgExpress;

option java_package = "com.sumscope";
option java_outer_classname = "MsgExpress";

message ErrMessage {
  required int32 errcode = 1;
  required string errmsg = 2;
}

message StartupApplication { //
  required string exefullname = 1;
  repeated string args = 2;
}

message StopBroker { //
  optional string dummy = 1;
}

message CommonResponse { //
  required int32 retcode = 1;
  optional string msg = 2;
}

message LoginInfo {//App登录信息
  optional int32  type = 1;//类别，0表示它是客户端，1表示它是服务端
  optional string name = 2; //服务名称（type=1）或客户端产品名称（type=0）
  optional int32  group = 3;//type=0时忽略
  optional string  uuid = 4; //唯一标识，type=0时忽略
  optional string auth = 5; //认证码，type=0时忽略
  optional int64 starttime = 6; //程序启动的时刻
  repeated int32 serviceid = 7;//服务号,即appId，type=0时忽略
  optional string ip = 8;
}

message LoginResponse {//
  optional int32 addr = 1;
  optional int64 brokertime = 2; //服务器时间
}

message Logout {
  optional int32 reserve = 1;
}

message GetAppList {
  repeated int32 serviceid = 1;
}

message GetAppInfo {
  required int32 addr = 1;
}

enum AppStatus {
  None = 0 ;
  Connected = 1 ;
  Authing = 2;
  Authed =3;
}

message AppInfo {
  required LoginInfo loginInfo = 1;
  required int32 addr = 2;
  optional int64 logintime = 3;
  optional AppStatus status = 4;
  optional string token = 5;
}

message UpdateAppStatus {
  required int32 addr = 1;
  required AppStatus status = 2;
  required string token = 3;
}

message AppList {
  repeated AppInfo appinfo = 1;
}

message AppServerList {
  required int32 serviceid = 1;
  repeated int32 addrs = 2;
  required bool isMasterSlaveMode = 3;//serviceid指定的服务是否为Master/Slave模式
  required bool brokerIsMaster = 4;//当前broker是否为master
}

message KickOffApp {
  required int32 addr = 1;
}

message RestartApp {
  required string uuid = 1;
}

message BrokerInfo {
  optional int64 starttime = 1; //broker启动的时间，单位ms
  optional int32 brokerid = 2; //broker ID
}

message HeartBeat {//心跳包信息
  optional int32  cpu = 1;
  optional int32  topmemory = 2;
  optional int32  memory = 3;
  optional int32  sendqueue = 4;//发送队列
  optional int32  receivequeue = 5;//接收队列
  optional int32  sendrequest = 6;//发送请求数量
  optional int32  recvrequest = 7;//接收请求数量
  optional int32  sendresponse = 8;//发送应答数量
  optional int32  recvresponse = 9;//接收应答数量
  optional int32  sendpub = 10;//发送发布数量
  optional int32  recvpub = 11;//接收发布数量
  optional int64  servertime = 12;//app server time
}
message HeartBeatResponse {//心跳包信息
  required int32 retcode = 1;
  optional int64  servertime = 2;//app server time
  optional int64 brokertime = 3;//broker time
}

enum DataType {
  STRING = 1;
  INT32 = 2;
  UINT32 = 3;
  INT64 = 4;
  UINT64 = 5;
  FLOAT = 6;
  DOUBLE = 7;
  DATETIME = 8;
  BINARY = 9;
  BOOL = 10;
  COMPLEX = 11;
}

message Complex {
  required int64 a = 1;
  required bytes b = 2;
}

message DataItem {
  required int32 key = 1;
  required DataType type = 2;
  repeated bytes value = 3;//将要废弃
  repeated string strVal = 4;
  repeated int32 iVal = 5;
  repeated uint32 uiVal = 6;
  repeated int64 lVal = 7;
  repeated uint64 ulVal = 8;
  repeated float fVal = 9;
  repeated double dVal = 10;
  repeated bool bVal = 11;
  repeated bytes rawVal = 12;
  repeated uint64 tVal = 13;
  repeated Complex compVal = 14;
  optional bool isPK = 20;//是否作为Primary Key,存储和查询的时候用
}

enum Operator {
  Equal = 1;
  NotEqual = 2;
  Less = 3;
  LessOrEqual = 4;
  Bigger = 5;
  BiggerOrEqual = 6;
}

message ConditionValue {
  required Operator operator = 1;
  required bytes value = 2;
}

message ConditionItem {
  required int32 key = 1;
  required DataType type = 2;
  repeated ConditionValue value = 3;
}

message SimpleSubscription {
  required int32 subid = 1;
  required int32 topic = 2;
  repeated bytes submsg = 3;//订阅的普通消息，当填写多个时，必须为同一个类型的消息
  optional int32 useraddr = 4[default=0];//订阅用户的地址，如果是给自己订阅，则不填
}

message SubscribeData {
  required int32 subid = 1;
  required int32 topic = 2;
  repeated DataItem condition = 3;
  repeated ConditionItem excondition = 4; //扩展条件
  repeated int32 index = 5;
  optional int32 useraddr = 6[default=0];//订阅用户的地址，如果是给自己订阅，则不填
}

message UnSubscribeData {
  required int32 subid = 1;
  optional int32 useraddr = 2[default=0];
}

message ComplexSubscribeData {
  repeated UnSubscribeData unsub = 1;
  repeated SubscribeData sub = 2;
}

message PublishData {
  required int32 topic = 1;
  repeated DataItem item = 2;
  repeated int32 subid = 3;
  optional string uuid = 4;//发送者产生的全局唯一的uuid
  optional uint64 id = 5;//接收者存储时产生当前topic下递增的id
}

message TokenInfo
{
  required bytes token = 1;
  required int64 userid=2;
}

message Header
{
  required int32 packageType = 1;//Request=1,Response,Publish
  optional int32 iszip=2;
  optional int32 compratio=3;
  required int32 serialnum=4;
  required int32 command=5;
}
message Pack
{
  required Header header=1;
  required bytes body=2;
}

